--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     .links a{ display:inline-block; margin:6px 8px 0 0; }
     pre.testlog { background:#0b0c10; color:#c4d2ff; padding:10px; border-radius:10px; border:1px dashed #2a3040; max-height:32vh; overflow:auto; }
 
+    <script>
+    window.goatcounter = {
+        path: function(p) { return location.host + p }
+    }
+</script>
+<script data-goatcounter="https://unluckyfett.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
     /* Disclaimer */
     .disclaimer{
       margin:12px 12px 0;
@@ -68,7 +76,7 @@
 
   <div id="disclaimer" class="disclaimer" role="note" aria-live="polite">
     <button id="discClose" class="close" aria-label="Dismiss disclaimer">✕</button>
-    <strong>Disclaimer:</strong> This app aggregates vintage RTTY art from third‑party sources. Some pieces may be insensitive or politically incorrect. I’ve done my best to filter NSFW, but there are no guarantees; viewer discretion is advised. None of the opinions expressed or implied are my own.
+    <strong>Disclaimer:</strong> This app aggregates vintage RTTY art from third‑party sources. Some pieces may be insensitive or politically incorrect. I’ve done my best to filter NSFW, but there are no guarantees; viewer discretion is advised.
     <br/>
     <span class="muted">Views and opinions expressed in the sourced artwork are those of the original creators and do not necessarily reflect my views. I do not endorse or take responsibility for any messages, symbols, or depictions shown.</span>
   </div>
