--- a/index.html
+++ b/index.html
@@ -29,14 +29,6 @@
     .links a{ display:inline-block; margin:6px 8px 0 0; }
     pre.testlog { background:#0b0c10; color:#c4d2ff; padding:10px; border-radius:10px; border:1px dashed #2a3040; max-height:32vh; overflow:auto; }
 
-    <script>
-    window.goatcounter = {
-        path: function(p) { return location.host + p }
-    }
-</script>
-<script data-goatcounter="https://unluckyfett.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
-
     /* Disclaimer */
     .disclaimer{
       margin:12px 12px 0;
@@ -58,7 +50,7 @@
     }
 
     /* Extra disclaimer rules */
-    .disclaimer::before{ content:'⚠️'; position:absolute; left:16px; top:50%; transform:translateY(-50%); font-size:22px; filter:drop-shadow(0 1px 0 rgba(0,0,0,.35)); }
+    .disclaimer::before{ content:'⚠️'; position:absolute; left:16px; top:12px; transform:none; font-size:22px; filter:drop-shadow(0 1px 0 rgba(0,0,0,.35)); }
     .disclaimer strong{ font-weight:800; font-size:16px; letter-spacing:.2px; }
     .disclaimer .close:hover{ background:rgba(255,255,255,0.04); }
 
@@ -76,7 +68,7 @@
 
   <div id="disclaimer" class="disclaimer" role="note" aria-live="polite">
     <button id="discClose" class="close" aria-label="Dismiss disclaimer">✕</button>
-    <strong>Disclaimer:</strong> This app aggregates vintage RTTY art from third‑party sources. Some pieces may be insensitive or politically incorrect. I’ve done my best to filter NSFW, but there are no guarantees; viewer discretion is advised.
+    <strong>Disclaimer:</strong> This app aggregates vintage RTTY art from third‑party sources. Some pieces may be insensitive or politically incorrect. I’ve done my best to filter NSFW, but there are no guarantees; viewer discretion is advised. None of the opinions expressed or implied are my own.
     <br/>
     <span class="muted">Views and opinions expressed in the sourced artwork are those of the original creators and do not necessarily reflect my views. I do not endorse or take responsibility for any messages, symbols, or depictions shown.</span>
   </div>
