--- a/index.html
+++ b/index.html
@@ -207,6 +207,21 @@
     </div>
   </div>
 
+  <!-- Footer / credit / license -->
+  <footer style="margin:12px; text-align:left;">
+    <img src="logo.png" alt="Logo" style="height:75px; width:auto; display:block; margin-bottom:6px;">
+    <p style="font-size:0.8em; color:#888; margin:0;">
+      © 2025 Frankie Caswell — UI Licensed under
+      <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener">CC BY 4.0</a>.
+    </p>
+  </footer>
+
+  <!-- Hidden canvas (safe to include even if unused) -->
+  <canvas id="asciiCanvas" style="display:none"></canvas>
+
+  <!-- GoatCounter analytics -->
+  <script data-goatcounter="https://unluckyfett.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
 <script>
 (function(){
   'use strict';
