--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>RTTY Art WAV Builder</title>
+  <title>TTY Art Feed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root { --bg:#0e0f12; --panel:#16181d; --ink:#e6e7eb; --muted:#9aa0a6; --accent:#7aa2ff; }
@@ -63,7 +63,7 @@
 </head>
 <body>
   <header>
-    <h1>RTTY Art WAV Builder</h1>
+    <h1>TTY Art Feed</h1>
   </header>
 
   <div id="disclaimer" class="disclaimer" role="note" aria-live="polite">
